--- a/.drone.yml
+++ b/.drone.yml
@@ -3,10 +3,10 @@ name: default
 
 steps:
   - name: install
-    image: python:3.6
+    image: python:3.6-alpine
     commands:
       - pip install -r requirements.txt
-      - ./main.py data/00.dat
+      - ./vgraph.py ./data/00.dat
       - '[ -e graph.png ]'
     when:
       event:
