--- a/.drone.yml
+++ b/.drone.yml
@@ -3,7 +3,7 @@ name: default
 
 steps:
   - name: install
-    image: python:3.6-alpine
+    image: python:3.6
     commands:
       - pip install -r requirements.txt
       - ./vgraph.py ./data/00.dat
